# python-freezerclient

./: .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: gate_hook.sh  local.conf.example  plugin.sh  settings
devstack/lib/: freezerclient
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: details.rst  freezer.rst  index.rst
doc/source/contributor/: contributing.rst  index.rst  testing.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst  shell.rst
freezerclient/: __init__.py  base.py  client.py  exceptions.py  shell.py  utils.py
freezerclient/osc/: plugin.py
freezerclient/tests/unit/: test_client.py  test_exceptions.py  test_osc_plugin.py  test_shell.py  test_utils.py
freezerclient/tests/unit/v1/: test_client.py  test_client_actions.py  test_client_backups.py  test_client_clients.py  test_client_jobs.py  test_client_sessions.py
freezerclient/tests/unit/v2/: test_base.py  test_client.py  test_client_actions.py  test_client_backups.py  test_client_clients.py  test_client_jobs.py  test_client_sessions.py
freezerclient/v1/: actions.py  backups.py  client.py  clients.py  jobs.py  sessions.py
freezerclient/v1/managers/: actions.py  backups.py  clients.py  jobs.py  sessions.py
freezerclient/v2/: actions.py  backups.py  client.py  clients.py  jobs.py  sessions.py
freezerclient/v2/managers/: actions.py  backups.py  base.py  clients.py  jobs.py  sessions.py
releasenotes/notes/: drop-py-2-7-9a3fc069f66d62bc.yaml  freezerclient-v2-d0729e1ee77d341b.yaml  install_osc_plugin-1ebf1257a8494eaa.yaml  v1_backup_api-3cea0e2e49cf5ad7.yaml
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
